--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "parcel": "^2.0.0-alpha.3.2",
     "parcel-bundler": "^1.12.4"
   },
