--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "gh-pages": "^2.2.0",
     "parcel": "^2.0.0-alpha.3.2",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-bundle-visualiser": "^1.2.0"
   },
   "scripts": {
     "build": "parcel build index.html",
