--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "build": "parcel build index.html",
-    "start": "parcel serve index.html"
+    "start": "parcel serve index.html",
+    "deploy": "gh-pages -d build -b master"
   }
 }
