Remove gh-pages build script
Parcel wasn't really meant to be configured and I'm not going to configure it. I'm just going to build a new react app to use for the react-router-dom. It's good to understand the limits of this project, and I want to move forward with Docker, not react-router-dom right now.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "scripts": {
     "build": "parcel build index.html",
-    "start": "parcel serve index.html",
-    "deploy": "gh-pages -d build -b master"
+    "start": "parcel serve index.html"
   }
 }
