--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "gh-pages": "^2.2.0",
     "parcel": "^2.0.0-alpha.3.2",
     "parcel-bundler": "^1.12.4",
@@ -21,5 +24,10 @@
   "scripts": {
     "build": "parcel build index.html",
     "start": "parcel serve index.html"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
+    ]
   }
 }
