--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "parcel serve index.html",
-    "build": "parcel build index.html",
+    "build": "parcel build index.html --public-url /dojo/",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d dist"
   }
