--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "@babel/core": "^7.0.0-0",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
     "gh-pages": "^2.2.0",
     "parcel": "^2.0.0-alpha.3.2",
     "parcel-bundler": "^1.12.4",
@@ -29,5 +27,11 @@
     "build": "parcel build index.html --public-url /dojo/",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d dist"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
   }
 }
