--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "@babel/preset-env": "^7.10.2",
     "core-js": "^3.6.5",
     "react": ">=15",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "gh-pages": "^2.2.0",
     "parcel": "^2.0.0-alpha.3.2",
